--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,91 @@
-.App {
-  text-align: center;
+body {
+    color: #776e65;
+    font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.board{
+    background: #bbada0;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.Grid {
-  /*display: flex;
-  flex-wrap: wrap;*/
-  background: #776e65;
-  margin:-1%;
-  padding:20px;
-}
-
-.Tile {
-   /*flex: 0 0 25%;
-   display: flex;
-   align-self: center;*/
-   
-   background: #000;
-   float: left;
-   height: 24vw;
-   margin: 1%;
-   width: 23%;
-}
-
-.Tile-Inner {
-    text-align: center;
+.tile{
+    width:107px;
+    height:107px;
+    line-height: 107px;
+    font-size: 55px;
     font-weight: bold;
-    font-size:3rem;
-    border-radius: 3px;
-    line-height: 3em;
+    text-align: center;
+    background: rgba(238, 228, 218, 0.35);
+    -webkit-transition: 100ms ease-in-out;
+    -moz-transition: 100ms ease-in-out;
+    transition: 100ms ease-in-out;
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    transition-property: transform;
 }
 
-.Value-2 {
+.board, .tile {
+    border: 15px solid #bbada0;
+    border-collapse: collapse;
+    border-radius: 3px;
+}
+
+.tile-2 {
     background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
-.Value-4 {
+
+.tile-4 {
     background: #ede0c8;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
-.Value-8 {
-    color: #f9f6f2;
+
+.tile-8 {
     background: #f2b179;
+    color: #f9f6f2;
+}
+
+.tile-16 {
+    background: #f59563;
+    color: #f9f6f2;
+}
+
+.tile-32 {
+    color: #f9f6f2;
+    background: #f67c5f;
+}
+
+.tile-64 {
+    color: #f9f6f2;
+    background: #f65e3b;
+}
+
+.tile-128{
+    color: #f9f6f2;
+    background: #edcf72;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    font-size: 45px;
+}
+
+.tile-256{
+    color: #f9f6f2;
+    background: #edcc61;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    font-size: 45px;
+}
+
+.tile-512{
+    color: #f9f6f2;
+    background: #edc850;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    font-size: 45px;
+}
+
+.tile-1024{
+    color: #f9f6f2;
+    background: #edc53f;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    font-size: 35px;
+}
+
+.tile-2048{
+    color: #f9f6f2;
+    background: #edc22e;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 35px;
 }
