--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ body {
 .Grid {
   position: relative;
   display: inline-block;
+  margin: 10px;
 }
 
 .game-over-overlay {
@@ -136,7 +137,9 @@ body {
 }
 
 .high-score-container {
-  margin-top: 20px;
+  margin-bottom: 40px;
+  position: fixed;
+  bottom: 0;
   text-align: center;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
